# Financial-Management

./: .gitignore  requirements.txt
FastAPI-server/: alembic.ini  app.py  config.py  database.py  manager.db  pyproject.toml
FastAPI-server/alembic/: env.py
FastAPI-server/alembic/versions/: 2023_04_30_abc33674d0b0_create_manager.py  2202b36b5950_insert_values.py  943616cbe805_create_manager.py
FastAPI-server/src/auth/: auth.py  manager.py  models.py  routers.py  schemas.py  utils.py
FastAPI-server/src/manager/: models.py  queries.py  routers.py  schemas.py
FastAPI-server/src/reports/: database.py  queries.py  reports.py  routers.py
django-server/whereismycash/: manage.py
django-server/whereismycash/manageCash/: admin.py  apps.py  models.py  serializers.py  views.py
django-server/whereismycash/manageCash/migrations/: 0001_initial.py
django-server/whereismycash/whereismycash/: asgi.py  settings.py  urls.py  wsgi.py
