[tool.poetry]
name = "fastapi-server"
version = "0.1.0"
description = ""
authors = ["diplodocx <zabarinternational@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.1"}
fastapi-users = {extras = ["sqlalchemy"], version = "^11.0.0"}
alembic = "^1.10.4"
aiosqlite = "^0.19.0"
celery = "^5.2.7"
flower = "^1.2.0"
pandas = "^2.0.1"
redis = "^4.5.4"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
